<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".Buttons.Activity_RadioButton">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select your favourite wwe SuperStar :: "
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

        <RadioGroup
                android:id="@+id/mygroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/johnCena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/johnCena"
                    android:textColor="#154"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <RadioButton
                    android:id="@+id/randyOrton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/randyOrton"
                    android:textColor="#154"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <RadioButton
                    android:id="@+id/romanReigns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/romanReigns"
                    android:textColor="#154"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <RadioButton
                    android:id="@+id/goldBerg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/goldBerg"
                    android:textColor="#154"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            <RadioButton
                    android:id="@+id/sheamus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/sheamus"
                    android:textColor="#154"
                    android:textSize="20sp"
                    android:textStyle="bold" />

        </RadioGroup>

        <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#0f0"
                android:padding="10dp"
                android:text="Submit"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        <Button
                android:id="@+id/clearbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#0f0"
                android:padding="10dp"
                android:text="clear"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
